xee-xpath/src/snapshots/xee_xpath__parse_ast__tests__integer_expr_single.snap
---
source: xee-xpath/src/parse_ast.rs
expression: "parse_expr_single(\"1\")"
---
(
    Path(
        PathExpr {
            steps: [
                PrimaryExpr(
                    (
                        Literal(
                            Integer(
                                1,
                            ),
                        ),
                        0..1,
                    ),
                ),
            ],
        },
    ),
    0..1,
)
