xee-xpath/src/snapshots/xee_xpath__parse_ast__tests__intersect.snap
---
source: xee-xpath/src/parse_ast.rs
expression: "parse_expr_single(\"child::foo intersect child::bar\")"
---
(
    Binary(
        BinaryExpr {
            operator: Intersect,
            left: PathExpr {
                steps: [
                    (
                        AxisStep(
                            AxisStep {
                                axis: Child,
                                node_test: NameTest(
                                    Name(
                                        Name {
                                            name: "foo",
                                            namespace: None,
                                        },
                                    ),
                                ),
                                predicates: [],
                            },
                        ),
                        SourceSpan {
                            offset: SourceOffset(
                                0,
                            ),
                            length: SourceOffset(
                                11,
                            ),
                        },
                    ),
                ],
            },
            right: PathExpr {
                steps: [
                    (
                        AxisStep(
                            AxisStep {
                                axis: Child,
                                node_test: NameTest(
                                    Name(
                                        Name {
                                            name: "bar",
                                            namespace: None,
                                        },
                                    ),
                                ),
                                predicates: [],
                            },
                        ),
                        SourceSpan {
                            offset: SourceOffset(
                                21,
                            ),
                            length: SourceOffset(
                                10,
                            ),
                        },
                    ),
                ],
            },
        },
    ),
    SourceSpan {
        offset: SourceOffset(
            0,
        ),
        length: SourceOffset(
            31,
        ),
    },
)
