xee-xpath/src/snapshots/xee_xpath__parse_ast__tests__multiple_steps.snap
---
source: xee-xpath/src/parse_ast.rs
expression: "parse_expr_single(\"child::foo/child::bar\")"
---
Spanned {
    value: Path(
        PathExpr {
            steps: [
                Spanned {
                    value: AxisStep(
                        AxisStep {
                            axis: Child,
                            node_test: NameTest(
                                Name(
                                    Name {
                                        name: "foo",
                                        namespace: None,
                                    },
                                ),
                            ),
                            predicates: [],
                        },
                    ),
                    span: SourceSpan {
                        offset: SourceOffset(
                            0,
                        ),
                        length: SourceOffset(
                            10,
                        ),
                    },
                },
                Spanned {
                    value: AxisStep(
                        AxisStep {
                            axis: Child,
                            node_test: NameTest(
                                Name(
                                    Name {
                                        name: "bar",
                                        namespace: None,
                                    },
                                ),
                            ),
                            predicates: [],
                        },
                    ),
                    span: SourceSpan {
                        offset: SourceOffset(
                            11,
                        ),
                        length: SourceOffset(
                            10,
                        ),
                    },
                },
            ],
        },
    ),
    span: SourceSpan {
        offset: SourceOffset(
            0,
        ),
        length: SourceOffset(
            21,
        ),
    },
}
