xee-xpath/src/snapshots/xee_xpath__parse_ast__tests__named_function_ref.snap
---
source: xee-xpath/src/parse_ast.rs
expression: "parse_expr_single(\"my_function#2\")"
---
(
    Path(
        PathExpr {
            steps: [
                PrimaryExpr(
                    (
                        NamedFunctionRef(
                            NamedFunctionRef {
                                name: Name {
                                    name: "my_function",
                                    namespace: None,
                                },
                                arity: 2,
                            },
                        ),
                        0..13,
                    ),
                ),
            ],
        },
    ),
    0..13,
)
