xee-xpath/src/snapshots/xee_xpath__parse_ast__tests__namespace_node_default_axis.snap
---
source: xee-xpath/src/parse_ast.rs
expression: "parse_expr_single(\"foo/namespace-node()\")"
---
(
    Path(
        PathExpr {
            steps: [
                (
                    AxisStep(
                        AxisStep {
                            axis: Child,
                            node_test: NameTest(
                                Name(
                                    Name {
                                        name: "foo",
                                        namespace: None,
                                    },
                                ),
                            ),
                            predicates: [],
                        },
                    ),
                    0..3,
                ),
                (
                    AxisStep(
                        AxisStep {
                            axis: Namespace,
                            node_test: KindTest(
                                NamespaceNode,
                            ),
                            predicates: [],
                        },
                    ),
                    4..20,
                ),
            ],
        },
    ),
    0..20,
)
