xee-xpath/src/snapshots/xee_xpath__parse_ast__tests__nested_expr.snap
---
source: xee-xpath/src/parse_ast.rs
expression: "parse_expr_single(\"1 + (2 * 3)\")"
---
Spanned {
    value: Binary(
        BinaryExpr {
            operator: Add,
            left: PathExpr {
                steps: [
                    Spanned {
                        value: PrimaryExpr(
                            Spanned {
                                value: Literal(
                                    Integer(
                                        1,
                                    ),
                                ),
                                span: SourceSpan {
                                    offset: SourceOffset(
                                        0,
                                    ),
                                    length: SourceOffset(
                                        1,
                                    ),
                                },
                            },
                        ),
                        span: SourceSpan {
                            offset: SourceOffset(
                                0,
                            ),
                            length: SourceOffset(
                                1,
                            ),
                        },
                    },
                ],
            },
            right: PathExpr {
                steps: [
                    Spanned {
                        value: PrimaryExpr(
                            Spanned {
                                value: Expr(
                                    Spanned {
                                        value: [
                                            Spanned {
                                                value: Binary(
                                                    BinaryExpr {
                                                        operator: Mul,
                                                        left: PathExpr {
                                                            steps: [
                                                                Spanned {
                                                                    value: PrimaryExpr(
                                                                        Spanned {
                                                                            value: Literal(
                                                                                Integer(
                                                                                    2,
                                                                                ),
                                                                            ),
                                                                            span: SourceSpan {
                                                                                offset: SourceOffset(
                                                                                    5,
                                                                                ),
                                                                                length: SourceOffset(
                                                                                    1,
                                                                                ),
                                                                            },
                                                                        },
                                                                    ),
                                                                    span: SourceSpan {
                                                                        offset: SourceOffset(
                                                                            5,
                                                                        ),
                                                                        length: SourceOffset(
                                                                            1,
                                                                        ),
                                                                    },
                                                                },
                                                            ],
                                                        },
                                                        right: PathExpr {
                                                            steps: [
                                                                Spanned {
                                                                    value: PrimaryExpr(
                                                                        Spanned {
                                                                            value: Literal(
                                                                                Integer(
                                                                                    3,
                                                                                ),
                                                                            ),
                                                                            span: SourceSpan {
                                                                                offset: SourceOffset(
                                                                                    9,
                                                                                ),
                                                                                length: SourceOffset(
                                                                                    1,
                                                                                ),
                                                                            },
                                                                        },
                                                                    ),
                                                                    span: SourceSpan {
                                                                        offset: SourceOffset(
                                                                            9,
                                                                        ),
                                                                        length: SourceOffset(
                                                                            1,
                                                                        ),
                                                                    },
                                                                },
                                                            ],
                                                        },
                                                    },
                                                ),
                                                span: SourceSpan {
                                                    offset: SourceOffset(
                                                        5,
                                                    ),
                                                    length: SourceOffset(
                                                        5,
                                                    ),
                                                },
                                            },
                                        ],
                                        span: SourceSpan {
                                            offset: SourceOffset(
                                                4,
                                            ),
                                            length: SourceOffset(
                                                7,
                                            ),
                                        },
                                    },
                                ),
                                span: SourceSpan {
                                    offset: SourceOffset(
                                        4,
                                    ),
                                    length: SourceOffset(
                                        7,
                                    ),
                                },
                            },
                        ),
                        span: SourceSpan {
                            offset: SourceOffset(
                                4,
                            ),
                            length: SourceOffset(
                                7,
                            ),
                        },
                    },
                ],
            },
        },
    ),
    span: SourceSpan {
        offset: SourceOffset(
            0,
        ),
        length: SourceOffset(
            11,
        ),
    },
}
