xee-xpath/src/snapshots/xee_xpath__parse_ast__tests__nested_let_expr.snap
---
source: xee-xpath/src/parse_ast.rs
expression: "parse_expr_single(\"let $x := 1, $y := 2 return 5\")"
---
(
    Let(
        LetExpr {
            var_name: Name {
                name: "x",
                namespace: None,
            },
            var_expr: (
                Path(
                    PathExpr {
                        steps: [
                            (
                                PrimaryExpr(
                                    (
                                        Literal(
                                            Integer(
                                                1,
                                            ),
                                        ),
                                        SourceSpan {
                                            offset: SourceOffset(
                                                10,
                                            ),
                                            length: SourceOffset(
                                                1,
                                            ),
                                        },
                                    ),
                                ),
                                SourceSpan {
                                    offset: SourceOffset(
                                        10,
                                    ),
                                    length: SourceOffset(
                                        1,
                                    ),
                                },
                            ),
                        ],
                    },
                ),
                SourceSpan {
                    offset: SourceOffset(
                        10,
                    ),
                    length: SourceOffset(
                        1,
                    ),
                },
            ),
            return_expr: (
                Let(
                    LetExpr {
                        var_name: Name {
                            name: "y",
                            namespace: None,
                        },
                        var_expr: (
                            Path(
                                PathExpr {
                                    steps: [
                                        (
                                            PrimaryExpr(
                                                (
                                                    Literal(
                                                        Integer(
                                                            2,
                                                        ),
                                                    ),
                                                    SourceSpan {
                                                        offset: SourceOffset(
                                                            19,
                                                        ),
                                                        length: SourceOffset(
                                                            1,
                                                        ),
                                                    },
                                                ),
                                            ),
                                            SourceSpan {
                                                offset: SourceOffset(
                                                    19,
                                                ),
                                                length: SourceOffset(
                                                    1,
                                                ),
                                            },
                                        ),
                                    ],
                                },
                            ),
                            SourceSpan {
                                offset: SourceOffset(
                                    19,
                                ),
                                length: SourceOffset(
                                    2,
                                ),
                            },
                        ),
                        return_expr: (
                            Path(
                                PathExpr {
                                    steps: [
                                        (
                                            PrimaryExpr(
                                                (
                                                    Literal(
                                                        Integer(
                                                            5,
                                                        ),
                                                    ),
                                                    SourceSpan {
                                                        offset: SourceOffset(
                                                            28,
                                                        ),
                                                        length: SourceOffset(
                                                            1,
                                                        ),
                                                    },
                                                ),
                                            ),
                                            SourceSpan {
                                                offset: SourceOffset(
                                                    28,
                                                ),
                                                length: SourceOffset(
                                                    1,
                                                ),
                                            },
                                        ),
                                    ],
                                },
                            ),
                            SourceSpan {
                                offset: SourceOffset(
                                    28,
                                ),
                                length: SourceOffset(
                                    1,
                                ),
                            },
                        ),
                    },
                ),
                SourceSpan {
                    offset: SourceOffset(
                        0,
                    ),
                    length: SourceOffset(
                        29,
                    ),
                },
            ),
        },
    ),
    SourceSpan {
        offset: SourceOffset(
            0,
        ),
        length: SourceOffset(
            29,
        ),
    },
)
