xee-xpath/src/snapshots/xee_xpath__parse_ast__tests__node_test.snap
---
source: xee-xpath/src/parse_ast.rs
expression: "parse_expr_single(\"self::node()\")"
---
(
    Path(
        PathExpr {
            steps: [
                (
                    AxisStep(
                        AxisStep {
                            axis: Self_,
                            node_test: KindTest(
                                Any,
                            ),
                            predicates: [],
                        },
                    ),
                    SourceSpan {
                        offset: SourceOffset(
                            0,
                        ),
                        length: SourceOffset(
                            12,
                        ),
                    },
                ),
            ],
        },
    ),
    SourceSpan {
        offset: SourceOffset(
            0,
        ),
        length: SourceOffset(
            12,
        ),
    },
)
