xee-xpath/src/snapshots/xee_xpath__parse_ast__tests__path_expr.snap
---
source: xee-xpath/src/parse_ast.rs
expression: "parse_path_expr(\"1\")"
---
PathExpr {
    steps: [
        Spanned {
            value: PrimaryExpr(
                Spanned {
                    value: Literal(
                        Integer(
                            1,
                        ),
                    ),
                    span: SourceSpan {
                        offset: SourceOffset(
                            0,
                        ),
                        length: SourceOffset(
                            1,
                        ),
                    },
                },
            ),
            span: SourceSpan {
                offset: SourceOffset(
                    0,
                ),
                length: SourceOffset(
                    1,
                ),
            },
        },
    ],
}
